:active style is not cleared when its display property is set to none before mouse released. https://bugs.webkit.org/show_bug.cgi?id=129465

Patch by Sanghyup Lee <sh53.lee@samsung.com> on 2014-03-03
Reviewed by Antonio Gomes.

Source/WebCore:

We currently clearing the :active style when element has a renderer.
This patch makes elements clear its active style regardless of renderer.

* dom/Document.cpp:
(WebCore::Document::updateHoverActiveState):

LayoutTests:

* fast/css/active-display-none-expected.txt: Added.
* fast/css/active-display-none.html: Added.

Canonical link: https://commits.webkit.org/147703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165037 268f45cc-cd09-0410-ab3c-d52691b4dbfc